# TheGroceryStore

./: CMakeLists.txt  LICENSE  README.md  Relazione.docx  analisi.sh  config.txt  configtest.txt  configtest1.txt  configtest2.txt  logfile.csv  logfile.txt  makefile  oldmakefile  test  testlog.csv
OldProject/: configtest2.txt  logfile.txt  makefile
OldProject/src/: CMakeLists.txt  cashier.c  client.c  client.h  client_in_queue.c  config.h  grocerystore.c  grocerystore.h  manager.c  manager.h  queue.c  queue.h  scfiles.c  scfiles.h  signal_handler.c  signal_handler.h  threadpool.c  threadpool.h  utils.h
include/: af_unix_conn.h  cassa_queue.h  cassiere.h  client.h  client_in_queue.h  config.h  list.h  log.h  notifier.h  queue.h  scfiles.h  sig_handling.h  stats.h  store.h  storetypes.h  threadpool.h  utils.h
libs/list/include/: list.h
libs/list/src/: list.c
libs/utils/include/: utils.h
libs/utils/src/: utils.c
src/: af_unix_conn.c  cashier.c  cashier.h  cassa_queue.c  cassiere.c  client.c  client.h  client_in_queue.c  client_in_queue.h  clientcopy.c  clientcopy.h  config.c  config.h  configloader.c  configloader.h  direttore.c  executor.c  executor.h  executorspool.c  executorspool.h  grocerystore.c  grocerystore.h  list.c  log.c  logger.c  logger.h  macros.h  main.c  manager.c  manager.h  manager_struct.c  manager_struct.h  notifier.c  notifier.h  queue.c  queue.h  scfiles.c  scfiles.h  sig_handling.c  signal_handler.c  (+11 more)
